  LocalEntityConnection bug fixed, selectRowCount() did not work with group by
  h2 library updated
  Shared library versions consolidated to build.properties
  Sonar run
  DefaultProperty.prepareValue() moved to DefaultEntity
  UiUtil.runWithProgressBar() now handles InterruptedException correctly
  User.UNIT_TEST_USER field removed
  SwingEntityTableModel.performQuery() condition parameter removed
  FXEntityListModel.queryContents() renamed to performQuery() for consistency
  Logback demo config moved to src/resources
  Unit test coverage results merged between modules, swing unit tests f.ex. cover a substantial amount of the framework module
  EntityComboBoxModel.setEntitySelectCondition() renamed to setSelectCondition(), parameter changed from EntitySelectCondition to Condition<Property.ColumnProperty>
  org.jminor.javafx.framework.model javadoc improvements
  ObservableEntityListTest added
  UiUtil.ProgressWorker refactored from anonymous class
  JasperReportsWrapper, bug fixed, could not run a parameterless report
  JUnit test improvements
  DefaultDatabaseConnection.DEFAULT_VALIDITY_CHECK_TIMEOUT intruduced and used
  JavaFX javadocs improved
  UiUtil.selectFilesOrDirectories() and UiUtil.selectFileToSave() now only set the startDir if it exists
  EntityJSONParser.parseValue() bug fixed, returned Date instead of Timestamp for timestamp based properties
  EntityJSONParser improved, serializing is now instance based with the following configuration options: includeForeignKeyValues, includeNullValues, includeReadOnlyValues and indentation
  UiUtil.setPreferredHeight() added
  SizedDocument bug fixed, inserting characters no longer moves caret to end
  DefaultKey.equals() bug fixed, null keys and zero based keys are no longer equal
  SizedDocumentFilter and DoubleDocumentFilter bug fixes
  IntField renamed to IntegerField, ValuesLinks.intValueLink() to integerValueLink() and IntegerField.getInt()/setInt() to getInteger()/setInteger() for consistency